website: fix spacing issue

--- a/website/pages/style.css
+++ b/website/pages/style.css
@@ -59,7 +59,7 @@
   }
 
   &:not(.no-section-spacing) > * + *,
-  & > .g-grid-container > * + * {
+  &:not(.g-featured-slider-section) > .g-grid-container > * + * {
     margin-top: 96px;
   }
 }
